tests/unit-fail-compilation/j078k.c.ref
j078k.c:2:7: error: Declaration for x appears with invalid storage class specifiers.
  Constraint violation (CV-TDG18). See C11 sec. 6.7.1:3
Translation failed (config dumped). Run kcc -d j078k.c to see commands run.
